--- a/index.html
+++ b/index.html
@@ -4,14 +4,34 @@
     <meta charset="utf-8">
     <title>Satscan</title>
     <meta name="viewport" content="width=device-width, initial-scale=1">
-    <!-- Favicon -->
-    <link rel="icon" type="image/png" href="satscannericon.png"/>
     <!-- Include A-Frame Library -->
     <script src="https://aframe.io/releases/1.2.0/aframe.min.js"></script>
     <!-- Include A-Frame Extras for WASD and Look Controls -->
     <script src="https://cdn.rawgit.com/donmccurdy/aframe-extras/v6.1.2/dist/aframe-extras.min.js"></script>
+    <!-- Loader Style -->
+    <style>
+        .loader {
+            position: fixed;
+            top: 0;
+            left: 0;
+            width: 100%;
+            height: 100%;
+            background-color: white;
+            display: flex;
+            justify-content: center;
+            align-items: center;
+            font-size: 2em;
+            color: black;
+        }
+    </style>
 </head>
 <body>
+    <!-- Loader -->
+    <div id="loader" class="loader">
+        Loading...
+    </div>
+
+    <!-- A-Frame Scene -->
     <a-scene>
         <!-- Asset Management System -->
         <a-assets>
@@ -47,5 +67,21 @@
             <!-- Lighting and other components can be added here -->
         </a-entity>
     </a-scene>
+
+    <!-- Hide Loader Script -->
+    <script>
+        document.addEventListener('DOMContentLoaded', function () {
+            var scene = document.querySelector('a-scene');
+            if (scene.hasLoaded) {
+                hideLoader();
+            } else {
+                scene.addEventListener('loaded', hideLoader);
+            }
+
+            function hideLoader() {
+                document.getElementById('loader').style.display = 'none';
+            }
+        });
+    </script>
 </body>
 </html>
