--- a/index.html
+++ b/index.html
@@ -105,10 +105,14 @@
     <!-- Text container -->
     <div class="text-container">
         <div class="terminal text-content">
-            Rare sat hunting is a new phenomenon introduced by Ordinal theory on Bitcoin. As stated nicely by Xverse (a BTC wallet),<br><br>
+            Rare sat hunting is a new phenomenon made possible by Ordinal theory on Bitcoin. As stated nicely by Xverse (a BTC wallet),<br><br>
             "Not all satoshis are created equal. Some satoshis are rarer than others, creating a market for rare satoshis. They contain special attributes that make them unique.<br><br>
             For example, the first satoshi mined after a Bitcoin halving event is considered rarer than other satoshis in that same block. These satoshis are classified as “epic sats” by the Rodarmor Rarity Index, which is used to determine a sat’s special attributes."<br><br>
-            So why does this matter and why does it require a lot of capital? Rare sats are extracted by locating rare sats within hot wallets of exchanges, and depositing and withdrawing bitcoin on that exchange to 'sift' through the bitcoin. These rare sats are becoming increasing popular and in high demand and early calculations show that even at just hunting with 50 BTC, users could generate up to 60% APY. I have access to a fully functioning automated rare sat hunter which can complete 50 cycles per day, but lack the capital for it to be fully efficient and generate high yield.
+            So why does this matter and why does it require a lot of capital? 
+            Rare sats are extracted by locating rare sats within hot wallets of exchanges, and depositing and withdrawing bitcoin on that exchange to 'sift' through the bitcoin. These rare sats are becoming increasingly popular and in high demand and early calculations show that even at just hunting with 50 BTC, users could generate up to 60% APY.
+
+            How does it work?
+            Deposit your Bitcoin and earn rare sat hunting yield. I have access to a fully functioning automated rare sat hunter which can complete 50 cycles per day, but the bot only becomes more efficient with increased capital, as fees quickly add up on Bitcoin.
         </div>
     </div>
 
