--- a/index.html
+++ b/index.html
@@ -85,7 +85,7 @@
     </div>
 
     <!-- "BUY $SCAN" button (Top Left) -->
-    <a class="buy-button" href="https://your-link-here.com" target="_blank">BUY $SCAN</a>
+    <a class="buy-button" href="https://unisat.io/brc20/scan" target="_blank">BUY $SCAN</a>
 
     <!-- A-Frame Scene -->
     <a-scene>
