--- a/index.html
+++ b/index.html
@@ -59,11 +59,9 @@
             color: lime;
             font-family: 'Consolas', 'Courier New', monospace;
         }
-        /* Style for the "BUY $SCAN" button */
-        .buy-button {
+        /* Style for the buttons */
+        .button {
             position: absolute;
-            top: 20px; /* Place at the top left corner */
-            left: 20px;
             background-color: black;
             color: lime;
             padding: 10px 20px;
@@ -72,7 +70,15 @@
             text-decoration: none;
             z-index: 2;
         }
-        .buy-button:hover {
+        .buy-button {
+            top: 20px; /* Place at the top left corner */
+            left: 20px;
+        }
+        .claim-button {
+            top: 20px; /* Place next to the "BUY $SCAN" button */
+            left: 160px;
+        }
+        .button:hover {
             background-color: lime;
             color: black;
         }
@@ -84,8 +90,11 @@
         Loading...
     </div>
 
-    <!-- "BUY $SCAN" button (Top Left) -->
-    <a class="buy-button" href="https://unisat.io/brc20/scan" target="_blank">BUY $SCAN</a>
+    <!-- "BUY $SCAN" button -->
+    <a class="button buy-button" href="https://your-link-here.com" target="_blank">BUY $SCAN</a>
+
+    <!-- "CLAIM BTC" button -->
+    <a class="button claim-button" href="https://your-btc-claim-link.com" target="_blank">CLAIM BTC</a>
 
     <!-- A-Frame Scene -->
     <a-scene>
