--- a/index.html
+++ b/index.html
@@ -142,7 +142,7 @@
     </div>
 
     <!-- "BUY $SCAN" button -->
-    <a class="button buy-button" href="https://your-link-here.com" target="_blank">BUY $SCAN</a>
+    <a class="button buy-button" href="https://unisat.io/brc20/scan" target="_blank">BUY $SCAN</a>
 
     <!-- "CLAIM BTC" button -->
     <a class="button claim-button" href="https://your-btc-claim-link.com" target="_blank">CLAIM BTC</a>
